# SafetensorsConverter

./: README.md  convert_from_torch_to_safetensors.py  pyproject.toml
