[tool.poetry]
name = "safetensorsconverter"
version = "0.1.0"
description = "Converts models to safetensors"
authors = ["Yass <bargach.y@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
safetensors = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
